# RenderEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/RenderEngine/: Engine.hpp  Internal.hpp  render_engine.hpp
include/RenderEngine/geometry/: Matrix.hpp  Quaternion.hpp  Referential.hpp  Vector.hpp  geometry.hpp
include/RenderEngine/graphics/: AntiAliasing.hpp  Buffer.hpp  Camera.hpp  Canvas.hpp  Color.hpp  Command.hpp  CommandBuffer.hpp  Drawable.hpp  Format.hpp  GPU.hpp  Image.hpp  ImageFormat.hpp  ImageView.hpp  Light.hpp  Pipeline.hpp  Shader.hpp  ShadowMap.hpp  SwapChain.hpp  graphics.hpp
include/RenderEngine/graphics/model/: Face.hpp  Material.hpp  Mesh.hpp  Model.hpp
include/RenderEngine/graphics/shaders/: ComputeShader.hpp  PushConstants.hpp  Shader.hpp  Shader3D.hpp  ShaderClear.hpp  ShaderDemo.hpp  ShaderEquirectangular.hpp  ShaderLight.hpp  ShaderShadow.hpp  Type.hpp  Types.hpp  Vertex.hpp
include/RenderEngine/graphics/shaders/implementations/: DemoShader.hpp  ShadowMapping.hpp
include/RenderEngine/scene/: Camera.hpp  Light.hpp  Referential.hpp  Scene.hpp
include/RenderEngine/scene/model/: Face.hpp  Material.hpp  Mesh.hpp  Model.hpp  UV.hpp
include/RenderEngine/user_interface/: Button.hpp  Handles.hpp  Keyboard.hpp  Mouse.hpp  Timer.hpp  Window.hpp  WindowSettings.hpp  WindowState.hpp
include/RenderEngine/utilities/: External.hpp  Functions.hpp  Macro.hpp
samples/models/: viking_room.mtl
src/: main.cpp
src/RenderEngine/: Engine.cpp  Internal.cpp
src/RenderEngine/geometry/: Matrix.cpp  Quaternion.cpp  Referential.cpp  Vector.cpp
src/RenderEngine/graphics/: Buffer.cpp  Camera.cpp  Canvas.cpp  Color.cpp  Command.cpp  CommandBuffer.cpp  GPU.cpp  Image.cpp  ImageView.cpp  Light.cpp  Pipeline.cpp  Shader.cpp  ShadowMap.cpp  SwapChain.cpp
src/RenderEngine/graphics/model/: Face.cpp  Material.cpp  Mesh.cpp  Model.cpp  UV.cpp
src/RenderEngine/graphics/shaders/: ComputeShader.cpp  DemoShader.cpp  Shader.cpp  Shader3D.cpp  Shader3D.frag  Shader3D.vert  ShaderClear.cpp  ShaderClear.frag  ShaderClear.vert  ShaderDemo.cpp  ShaderDemo.vert  ShaderEquirectangular.cpp  ShaderEquirectangular.geom  ShaderLight.cpp  ShaderLight.frag  ShaderLight.vert  ShaderShadow.cpp  compile.py
src/RenderEngine/graphics/shaders/Shader3D/: 0_shader.vert
src/RenderEngine/graphics/shaders/implementations/: DemoShader.cpp  Shader3D.cpp  ShadowMapping.cpp  compile.py
src/RenderEngine/graphics/shaders/implementations/Shader3D/: 0_shader.frag  0_shader.vert
src/RenderEngine/scene/: Camera.cpp  Light.cpp  Referential.cpp  Scene.cpp
src/RenderEngine/scene/model/: Face.cpp  Material.cpp  Mesh.cpp  Model.cpp  UV.cpp
src/RenderEngine/user_interface/: Handles.cpp  Keyboard.cpp  Mouse.cpp  Timer.cpp  Window.cpp  WindowState.cpp
src/RenderEngine/utilities/: Functions.cpp
src/schrift/: schrift.c
src/stb/: stb_image_resize.c  stb_image_write.c
(+1 files in other folders)
